App_2048.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: game-2048
  name: deploment-2048
  labels: 
    app: web-2048
    project: game-2048
    tier: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-2048
      project: game-2048
      tier: web
  template:
    metadata:
      labels: 
        app: web-2048
        project: game-2048
        tier: web
    spec:
      containers:
      - name: app-2048
        image: public.ecr.aws/l6m2t8p7/docker-2048:latest
        imagePullPolicy: Always       
        ports:
        - containerPort: 80
---
apiVersion: v1 
kind: Service
metadata:
  namespace: game-2048
  name: service-2048
spec:
  type: NodePort
  ports: 
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: web-2048
    project: game-2048
    tier: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2048
  namespace: game-2048
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb 
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-2048
            port:
              number: 80

# ---
# kind: Service
# apiVersion: v1
# metadata:
#   namespace: game-2048
#   name: service-2048
# spec:
#   type: LoadBalancer
#   selector:
#     app: web-2048
#     project: game-2048
#     tier: web
#   ports:
#   - protocol: TCP
#     port: 80 #service port
#     targetPort: 80 #target port
